debug: log Web3Auth client ID status

--- a/.env.local
+++ b/.env.local
@@ -4,3 +4,6 @@ NEXT_PUBLIC_SOLANA_NETWORK=mainnet-beta
 
 # Jupiter API (optional - for Pro API key)
 # NEXT_PUBLIC_JUPITER_API_KEY=
+
+# Web3Auth (for social login)
+NEXT_PUBLIC_WEB3AUTH_CLIENT_ID=BK7yYjp1LW75xsidsvCAe_1s7LukRNJM9NUV4GBzhmOQhA1KYOySa2h8HH0dYcPyJlmO2dD2GwF6S-rSgtb64UE
